--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <h1>Adding so Git Hub recognizes branch- John: To Be Deleted</h1>
+    <h1>Adding again</h1>
   
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
     <script src="script.js"></script>
