--- a/index.html
+++ b/index.html
@@ -5,10 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+    rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Adding so Git Hub recognizes branch- John: To Be Deleted</h1>
+    <header>
+        <section class="title"><a href="">Castle No Kings</a></section>
+        <a href=""><i class="material-icons">shopping_cart</i></a>
+            
+    
+    </header>
+
+    <section>
+
+    </section>
   
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
     <script src="script.js"></script>
