Nav bar complete

--- a/index.html
+++ b/index.html
@@ -13,9 +13,7 @@
 <body>
     <header>
         <section class="title"><a href="">Castle No Kings</a></section>
-        <a href=""><i class="material-icons">shopping_cart</i></a>
-            
-    
+        <a href="" class="cart"><i class="material-icons">shopping_cart</i></a>
     </header>
 
     <section>
