Band Pic and buttons added

--- a/index.html
+++ b/index.html
@@ -12,14 +12,21 @@
 </head>
 <body>
     <header>
-        <section class="title"><a href="">Castle No Kings</a></section>
+        <section class="title"><a href="">CASTLE NO KINGS</a></section>
         <a href="" class="cart"><i class="material-icons">shopping_cart</i></a>
     </header>
 
-    <section>
-
+    <section class="bandpicbox">
+        <img id="bandpic" src="pictures/band-promo-pic.jpg" alt="Castle No Kings Picture">
     </section>
-  
+    
+    <section class="btngroup">
+        <button class="button yellow">Apparel</button>
+        <button class="button burgundy">Music</button>
+        <button class="button burgundy">Posters</button>
+        <button class="button burgundy">Tickets</button>
+    </section>
+
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
     <script src="script.js"></script>
 </body>
