Added CSS HTML Carousel with test images

--- a/index.html
+++ b/index.html
@@ -20,13 +20,31 @@
         <img id="bandpic" src="pictures/band-promo-pic.jpg" alt="Castle No Kings Picture">
     </section>
     
-    <section class="btngroup">
-        <button class="button yellow">Apparel</button>
-        <button class="button burgundy">Music</button>
-        <button class="button burgundy">Posters</button>
-        <button class="button burgundy">Tickets</button>
+    <section class="container2">
+        <section class="btngroup">
+            <button class="button yellow">Apparel</button>
+            <button class="button burgundy">Music</button>
+            <button class="button burgundy">Posters</button>
+            <button class="button burgundy">Tickets</button>
+        </section>
+        <section class="slides"> 
+            <span id="item-1"></span>
+            <span id="item-2"></span>
+            <span id="item-3"></span>
+            <div class="slides1 item-1">
+                <a class="arrow arrow-prev" href="#item-3"></a>
+                <a class="arrow arrow-next" href="#item-2"></a>
+            </div>
+            <div class="slides1 item-2">
+                <a class="arrow arrow-prev" href="#item-1"></a>
+                <a class="arrow arrow-next" href="#item-3"></a>
+            </div>
+            <div class="slides1 item-3">
+                <a class="arrow arrow-prev" href="#item-2"></a>
+                <a class="arrow arrow-next" href="#item-1"></a>
+            </div>
+        </section>
     </section>
-
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
     <script src="script.js"></script>
 </body>
