--- a/checkout.html
+++ b/checkout.html
@@ -92,7 +92,7 @@
                 <h1>Shirt - Black</h1>
                 <i class="material-icons">clear</i>
             </section>
-            <section class="popup-image">
+            <section class="popup-image" id="blackShirt">
                 <img src="pictures/black-shirt.jpg">
             </section>
             <p class="popup-price" >$20.00</p>
