Fininished all the pop ups / added the rest of the pictures

--- a/checkout.html
+++ b/checkout.html
@@ -181,6 +181,84 @@
                     <p>A poster featuring the promo photo from the ep, "Blind".</p>
             </section>
     </section>
+    <!--poster #3-->
+    <section class="product-popup">
+        <section class="popup-header">
+            <h1>Poster - Release Tour Promo</h1>
+            <i class="material-icons">clear</i>
+        </section>
+        <section class="popup-image">
+            <img src="pictures/poster-3.jpg">
+        </section>
+        <p class="popup-price" >$5.00</p>
+        <section class="adjust-quantity">
+                <i class="material-icons">remove</i>1<i class="material-icons">add</i>
+        </section>
+        <button class="popup-addToCart" type="button">ADD TO CART</button>
+
+        <section class="description">
+                <p>A poster featuring the promo photo from the release tour of "Blind".</p>
+        </section>
+    </section>
+    <!--cymbal-->
+    <section class="product-popup">
+        <section class="popup-header">
+            <h1>Cymbal from "Skin Deep"</h1>
+            <i class="material-icons">clear</i>
+        </section>
+        <section class="popup-image">
+            <img src="pictures/music-video-cymbal.jpg">
+        </section>
+        <p class="popup-price" >$30.00</p>
+        <section class="adjust-quantity">
+                <i class="material-icons">remove</i>1<i class="material-icons">add</i>
+        </section>
+        <button class="popup-addToCart" type="button">ADD TO CART</button>
+
+        <section class="description">
+                <p>Purchase one of the cymbals used in the "Skin Deep" music video! (ONLY 4 AVAILABLE)</p>
+        </section>
+    </section>
+    <!--Tix 1-->
+    <section class="product-popup">
+        <section class="popup-header">
+            <h1>Tix - July 21st</h1>
+            <i class="material-icons">clear</i>
+        </section>
+        <section class="popup-image">
+            <img src="pictures/july21show.jpg">
+        </section>
+        <p class="popup-price" >$8.00</p>
+        <section class="adjust-quantity">
+                <i class="material-icons">remove</i>
+                1
+                <i class="material-icons">add</i>
+        </section>
+        <button class="popup-addToCart" type="button">ADD TO CART</button>
+
+        <section class="description">
+                <p>Purchase a ticket to Castle No Kings' upcoming battle of the bands show with Rogue, Homegrownups, The Harbor Divide, and Ice Cream Militia at the Civic in Toledo, OH.</p>
+        </section>
+    </section>
+    <!--Tix 2-->
+    <section class="product-popup">
+        <section class="popup-header">
+            <h1>Tix - Aug 18th</h1>
+            <i class="material-icons">clear</i>
+        </section>
+        <section class="popup-image">
+            <img src="pictures/aug18show.jpg">
+        </section>
+        <p class="popup-price" >$5.00</p>
+        <section class="adjust-quantity">
+                <i class="material-icons">remove</i>1<i class="material-icons">add</i>
+        </section>
+        <button class="popup-addToCart" type="button">ADD TO CART</button>
+
+        <section class="description">
+                <p>Purchase a ticket to Castle No Kings' upcoming show with Wild Nights, Homegrownups, Rogue, Into the Wild, and For Granted the Sky at Frankie's in Toledo, OH.</p>
+        </section>
+    </section>
 
 
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
