Started checkout page and added a little JS to cart

--- a/checkout.html
+++ b/checkout.html
@@ -276,6 +276,8 @@
         </section>
     </seection>
 
+    <h1>CHECKOUT</h1>
+
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
     <script src="script.js"></script>
 </body>
