--- a/index.html
+++ b/index.html
@@ -45,6 +45,24 @@
             </div>
         </section>
     </section>
+
+    <!--CODE FOR SLIDE OUT CART-->
+    <section class="slideOutCartParent">
+        <section class="slideOutCart">
+            <section class="cart-header">
+                <h1>CART</h1>
+                <i class="material-icons">clear</i>
+            </section>
+            <section class="itemsInCart"></section>
+            <section class="updateClear">
+                <button class="update-button" type="button">UPDATE</button>
+                <button class="clear-button" type="button">CLEAR</button>
+            </section>
+            <button class="checkout-button" type="button">CHECKOUT</button>
+        </section>
+    </seection>
+
+
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
     <script src="script.js"></script>
 </body>
