adding item buy options beneath carousel

--- a/index.html
+++ b/index.html
@@ -28,34 +28,6 @@
             <button class="button burgundy">Posters</button>
             <button class="button burgundy">Tickets</button>
         </section>
-        <!-- <section class="slides"> 
-            <span id="item-1"></span>
-            <span id="item-2"></span>
-            <span id="item-3"></span>
-            <div class="slides1 item-1">
-                <a class="arrow arrow-prev" href="#item-3"></a>
-                <a class="arrow arrow-next" href="#item-2"></a>
-                    <!-- </section>
-                    <p class="popup-price" >$5.00</p>
-                    <section class="adjust-quantity">
-                            <i class="material-icons">remove</i>1<i class="material-icons">add</i>
-                    </section>
-                    <button class="popup-addToCart" type="button">ADD TO CART</button>
-            
-                    <section class="description">
-                    </section>
-            </section> -->
-            <!-- </div>
-            <div class="slides1 item-2">
-                <a class="arrow arrow-prev" href="#item-1"></a>
-                <a class="arrow arrow-next" href="#item-3"></a>
-            </div>
-            <div class="slides1 item-3">
-                <a class="arrow arrow-prev" href="#item-2"></a>
-                <a class="arrow arrow-next" href="#item-1"></a>
-            </div>
-        </section> --> 
-
         <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
             <div class="carousel-inner">
               <div class="carousel-item active">
@@ -77,6 +49,14 @@
               <span class="sr-only">Next</span>
             </a>
           </div>
+
+          <section class="carouselbuy">
+          <p class="popup-price" >$20.00</p>
+          <section class="adjust-quantity">
+                  <i class="material-icons">remove</i>1<i class="material-icons">add</i>
+          </section>
+          <button class="popup-addToCart" type="button">ADD TO CART</button>
+        </section>
     </section>
     
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
