--- a/index.html
+++ b/index.html
@@ -217,13 +217,13 @@
         <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img class="d-block w-100" src="pictures/album-art.jpg" alt="First slide">
+                <img class="d-block w-100" id="CD" src="pictures/album-art.jpg" alt="First slide">
               </div>
               <div class="carousel-item">
-                <img class="d-block w-100" src="pictures/black-shirt.jpg" alt="Second slide">
+                <img class="d-block w-100" id="blackShirt" src="pictures/black-shirt.jpg" alt="Second slide">
               </div>
               <div class="carousel-item">
-                <img class="d-block w-100" src="pictures/burgundy-shirt.jpg" alt="Third slide">
+                <img class="d-block w-100" id="burgundyShirt" src="pictures/burgundy-shirt.jpg" alt="Third slide">
               </div>
             </div>
             <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
@@ -253,7 +253,7 @@
 
 
     <!--CODE FOR SLIDE OUT CART-->
-    <section class="slideOutCartParent">
+    <!-- <section class="slideOutCartParent">
         <section class="slideOutCart">
             <section class="cart-header">
                 <h1>CART</h1>
@@ -266,7 +266,7 @@
             </section>
             <button class="checkout-button" type="button">CHECKOUT</button>
         </section>
-    </section>
+    </section> -->
 
 
     </section>
