--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-    <title>Document</title>
+    <title>CASTLE NO KINGS</title>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
         crossorigin="anonymous">
@@ -375,7 +375,7 @@
                 <i class="material-icons">remove</i>1
                 <i class="material-icons">add</i>
             </section>
-            <button class="popup-addToCart" type="button">ADD TO CART</button>
+            <button class="carousel-addToCart" type="button">ADD TO CART</button>
 
         </section>
         </div>
