--- a/checkout.html
+++ b/checkout.html
@@ -19,37 +19,41 @@
             <button class="clear-cart" type="button">CLEAR</button>
             <button class="update-cart" type="button">UPDATE</button>
         </section>
-        <section class="column1"></section>
-        <section class="column2"></section>
-        <section class="column3"></section>
-        <section class="column4"></section>
-        <section class="column5"></section>
-        <section class="column6"></section>
+        <section class="columns">
+            <section class="column1"></section>
+            <section class="column2"></section>
+            <section class="column3"></section>
+            <section class="column4"></section>
+            <section class="column5"></section>
+            <section class="column6"></section>
+        </section>
     </section>
 
     <section class="checkout-order-summary">
         <p>ORDER SUMMARY</p>
         <section class="subtotal">
-            <p>Your Cart</p>
-            <section></section>
+            <p>Subtotal</p>
+            <section>$8.00</section>
         </section>
         <section class="tax">
             <p>Tax</p>
-            <section></section>
+            <section>$2.00</section>
         </section>
         <section class="total">
             <p>TOTAL</p>
-            <section></section>
+            <section>$10.00</section>
         </section>
     </section>
 
     <section class="way-to-pay">
-        <button class="cash">CASH</button>
-        <button class="credit">CREDIT</button>
+        <section class="cash-credit">
+            <button class="cash">CASH</button>
+            <button class="credit">CREDIT</button>
+        </section>
         <form class="cash-form">
             <section class="amount-due">
                 <p>Amount Due</p>
-                <section></section>
+                <section>$10.00</section>
             </section>
             <section class="amount-tendered">
                 <input type="text" placeholder="Amount Tendered">
@@ -57,26 +61,32 @@
             </section>
             <section class="change-due">
                 <p>Change Due</p>
-                <section></section>
+                <section>$10.00</section>
             </section>
         </form>
         <form class="credit-form">
-            <input type="text" placeholder="Name As It Appears On Card">
-            <input type="text" placeholder="Card Number">
+            <section class="amount-due">
+                <p>Amount Due</p>
+                <section>$10.00</section>
+            </section>
+            <section class="name-number">
+                <input type="text" placeholder="Name As It Appears On Card">
+                <input type="text" placeholder="Card Number">
+            </section>
             <section>
-                <section>
-                    <p>Expiration Date</p>
+                <section class="exp-date">
+                    <p>Exp Date</p>
                     <input list="months" name="month">
                     <datalist id="months">
-                        <option value="1">
-                        <option value="2">
-                        <option value="3">
-                        <option value="4">
-                        <option value="5">
-                        <option value="6">
-                        <option value="7">
-                        <option value="8">
-                        <option value="9">
+                        <option value="01">
+                        <option value="02">
+                        <option value="03">
+                        <option value="04">
+                        <option value="05">
+                        <option value="06">
+                        <option value="07">
+                        <option value="08">
+                        <option value="09">
                         <option value="10">
                         <option value="11">
                         <option value="12">
@@ -105,15 +115,17 @@
                         <option value="2037">
                         <option value="2038">
                     </datalist>
+                    <input class="cvv" type="text" placeholder="CVV">
                 </section>
-                <input type="text" placeholder="CVV">
+                
             </section>
             <button type="submit">SUBMIT</button>
         </form>
     </section>
+    <button class="place-order" type="button">PLACE ORDER</button>
 </section>
 
-    <button class="place-order" type="button">PLACE ORDER</button>
+    
 
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
     <script src="script.js"></script>
