--- a/checkout.html
+++ b/checkout.html
@@ -10,11 +10,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-
-
-
-
-
+<!-- Ben: Finish HTML/CSS of checkout page -->
 
     <!--CODE FOR SLIDE OUT CART-->
     <section class="slideOutCartParent">
