--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
     <header>
         <section class="title">
-            <a href="">CASTLE NO KINGS</a>
+            <a href="index.html">CASTLE NO KINGS</a>
         </section>
         <section class="cart">
             <i class="material-icons">shopping_cart</i>
@@ -370,13 +370,12 @@
         </div>
 
         <section class="carouselbuy">
-            <p class="popup-price">$20.00</p>
-            <section class="adjust-quantity">
+            <p class="carousel-price">$20.00</p>
+            <section class="carousel-adjust-quantity">
                 <i class="material-icons">remove</i>1
                 <i class="material-icons">add</i>
             </section>
             <button class="carousel-addToCart" type="button">ADD TO CART</button>
-
         </section>
         </div>
         <div class="slides1 item-3">
@@ -391,7 +390,7 @@
         <section class="slideOutCart">
             <section class="cart-header">
                 <h1>CART</h1>
-                <i class="material-icons">clear</i>
+                <button type="button" class="close"><i class="material-icons">clear</i></button>
             </section>
             <section class="itemsInCart"></section>
             <section class="updateClear">
