--- a/index.html
+++ b/index.html
@@ -396,10 +396,10 @@
             </section>
             <section class="itemsInCart"></section>
             <section class="updateClear">
-                <button class="update-button" type="button">UPDATE</button>
-                <button class="clear-button" type="button">CLEAR</button>
+                <button class="update-button burgundy" type="button">UPDATE</button>
+                <button class="clear-button burgundy" type="button">CLEAR</button>
             </section>
-            <button class="checkout-button" type="button">CHECKOUT</button>
+            <button class="checkout-button yellow" type="button">CHECKOUT</button>
         </section>
     </section>
 
