--- a/index.html
+++ b/index.html
@@ -306,18 +306,19 @@
     <!-- Begin Carousel Section -->
     <section class="container2">
         <section class="btngroup">
-            <button class="button yellow">Apparel</button>
-            <button class="button burgundy">Music</button>
-            <button class="button burgundy">Collectibles</button>
-            <button class="button burgundy">Tickets</button>
+            <button class="button carousel-active" id="button-apparel">Apparel</button>
+            <button class="button carousel-inactive" id="button-music">Music</button>
+            <button class="button carousel-inactive" id="button-collectibles">Collectibles</button>
+            <button class="button carousel-inactive" id="button-tickets">Tickets</button>
         </section>
 
-        <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
-            <div class="carousel-inner">
-                <section class="apparelcarousel">
+        <div id="carouselExampleControls">
+                <section id="apparelcarousel" class="carousel slide" data-ride="carousel">
+                    <div class="carousel-inner">
                     <div class="carousel-item active">
                         <img class="d-block w-100" id="blackShirt" src="pictures/black-shirt.jpg" alt="Second slide">
                     </div>
+                    
                     <div class="carousel-item">
                         <img class="d-block w-100" id="burgundyShirt" src="pictures/burgundy-shirt.jpg" alt="Third slide">
                     </div>
@@ -327,17 +328,39 @@
                     <div class="carousel-item">
                         <img class="d-block w-100" id="whiteShirt" src="pictures/white-shirt.jpg" alt="Twelfth Slide">
                     </div>
+                    </div>
+                    <a class="carousel-control-prev" href="#apparelcarousel" role="button" data-slide="prev">
+                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                            <span class="sr-only">Previous</span>
+                        </a>
+                        <a class="carousel-control-next" href="#apparelcarousel" role="button" data-slide="next">
+                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                            <span class="sr-only">Next</span>
+                        </a>
                 </section>
-                <section class="musiccarousel">
-                    <div class="carousel-item">
+
+                <section id="musiccarousel" class="carousel slide" data-ride="carousel">
+                    <div class="carousel-inner">
+                    <div class="carousel-item active">
                         <img class="d-block w-100" id="CD" src="pictures/album-art.jpg" alt="First slide">
                     </div>
                     <div class="carousel-item">
                         <img class="d-block w-100" id="vinyl" src="pictures/vinyl.png" alt="Eleventh Slide">
                     </div>
+                    </div>
+                    <a class="carousel-control-prev" href="#musiccarousel" role="button" data-slide="prev">
+                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                            <span class="sr-only">Previous</span>
+                        </a>
+                        <a class="carousel-control-next" href="#musiccarousel" role="button" data-slide="next">
+                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                            <span class="sr-only">Next</span>
+                        </a>
                 </section>
-                <section class="collectiblescarousel">
-                    <div class="carousel-item">
+
+                <section id="collectiblescarousel" class="carousel slide" data-ride="carousel">
+                    <div class="carousel-inner">
+                    <div class="carousel-item active">
                         <img class="d-block w-100" id="cymbal" src="pictures/music-video-cymbal.jpg" alt="Seventh Slide">
                     </div>
                     <div class="carousel-item">
@@ -349,24 +372,38 @@
                     <div class="carousel-item">
                         <img class="d-block w-100" id="poster3" src="pictures/poster-3.jpg" alt="Tenth Slide">
                     </div>
+                    </div>
+                    <a class="carousel-control-prev" href="#collectiblescarousel" role="button" data-slide="prev">
+                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                            <span class="sr-only">Previous</span>
+                        </a>
+                        <a class="carousel-control-next" href="#collectiblescarousel" role="button" data-slide="next">
+                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                            <span class="sr-only">Next</span>
+                        </a>
                 </section>
-                <section class="ticketscarousel">
-                    <div class="carousel-item">
+
+                <section id="ticketscarousel" class="carousel slide" data-ride="carousel">
+                    <div class="carousel-inner">
+                    <div class="carousel-item active">
                         <img class="d-block w-100" id="augShow" src="pictures/aug18show.jpg" alt="Fourth Slide">
                     </div>
                     <div class="carousel-item">
                         <img class="d-block w-100" id="julyShow" src="pictures/july21show.jpg" alt="Sixth Slide">
                     </div>
+                    </div>
+                    <a class="carousel-control-prev" href="#ticketscarousel" role="button" data-slide="prev">
+                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                            <span class="sr-only">Previous</span>
+                        </a>
+                        <a class="carousel-control-next" href="#ticketscarousel" role="button" data-slide="next">
+                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                            <span class="sr-only">Next</span>
+                        </a>
                 </section>
+
             </div>
-            <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="sr-only">Previous</span>
-            </a>
-            <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="sr-only">Next</span>
-            </a>
+
         </div>
 
         <section class="carouselbuy">
