--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
     <section class="product-popup-black" id="hidePopupBlack">
         <section class="popup-header">
             <h1>Shirt - Black</h1>
-            <i class="material-icons" id="clear">clear</i>
+            <button type="button"><i class="material-icons" id="close">clear</i></button>
         </section>
         <section class="popup-image" id="blackShirt">
             <img src="pictures/black-shirt.jpg">
