Gave functionality to add and remove buttons on carosel and popups.

--- a/checkout.html
+++ b/checkout.html
@@ -20,8 +20,8 @@
     <section class="checkout-cart">
         <section class="checkout-cart-header">
             <p>YOUR CART</p>
-            <button class="clear-cart burgundy" type="button">CLEAR</button>
-            <button class="update-cart burgundy" type="button">UPDATE</button>
+            <button class="clear-cart carousel-inactive" type="button">CLEAR</button>
+            <button class="update-cart carousel-inactive" type="button">UPDATE</button>
         </section>
         <section class="columns">
             <section class="column1"></section>
@@ -51,8 +51,8 @@
 
     <section class="way-to-pay">
         <section class="cash-credit">
-            <button class="cash burgundy">CASH</button>
-            <button class="credit burgundy">CREDIT</button>
+            <button class="cash carousel-inactive">CASH</button>
+            <button class="credit carousel-inactive">CREDIT</button>
         </section>
         <form class="cash-form">
             <section class="amount-due">
@@ -62,7 +62,7 @@
             </section>
             <section class="amount-tendered">
                 <input type="text" placeholder="Amount Tendered">
-                <button class="burgundy" type="button">SUBMIT</button>
+                <button class="carousel-inactive" type="button">SUBMIT</button>
             </section>
             <section class="change-due">
                 <p>Change Due</p>
@@ -124,7 +124,7 @@
                 </section>
                 
             </section>
-            <button class="credit-submit burgundy" type="submit">SUBMIT</button>
+            <button class="credit-submit carousel-inactive" type="submit">SUBMIT</button>
         </form>
     </section>
     <button id="place-order" type="button">PLACE ORDER</button>
