first draft of total functions

--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
         <section class="popup-image">
             <img src="pictures/black-shirt.jpg">
         </section>
-        <p class="popup-price" id="blkShirtPrice">$20.00</p>
+        <p class="popup-price" id="blkShirtPrice">$<button class="price" value=20>20.00</button></p>
         <section class="adjust-quantity">
             <button type="button">
                 <i class="material-icons blkShirtQtyRemove">remove</i>
@@ -703,6 +703,10 @@
             <section class="updateClear">
                 <button class="update-button carousel-inactive" type="button">UPDATE</button>
                 <button class="clear-button carousel-inactive" type="button">CLEAR</button>
+            </section>
+            <section class="cartTotal">
+                <p>TOTAL:</p>
+                <section class="total"></section>
             </section>
             <a href="checkout.html"><button class="checkout-button carousel-active" type="button">CHECKOUT</button></a>
 
